new imdb layout broke things, also stricter floof controlls, and upped java to 22